chore: fix text component md size in storybook and add else condition in scss to avoid extra classnames

--- a/lib/components/Typography/typography.scss
+++ b/lib/components/Typography/typography.scss
@@ -79,13 +79,13 @@ $weights: regular, bold;
                 }
             }
         }
-    }
-
-    @each $weight in $weights {
-        &__weight--#{$weight} {
-            @each $decoration in $decorations {
-                &__decoration--#{$decoration} {
-                    @include styleNoSizes($type, $weight, $decoration);
+    } @else {
+        @each $weight in $weights {
+            &__weight--#{$weight} {
+                @each $decoration in $decorations {
+                    &__decoration--#{$decoration} {
+                        @include styleNoSizes($type, $weight, $decoration);
+                    }
                 }
             }
         }
