--- a/lib/components/Typography/typography.scss
+++ b/lib/components/Typography/typography.scss
@@ -1,4 +1,4 @@
-@import "../../styles/quill.css";
+@import "../../styles/index.scss";
 
 $headings: hero, h1, h2, h3, h4, h5, h6;
 $sizes: xl, lg, md, sm;
