--- a/lib/styles/index.scss
+++ b/lib/styles/index.scss
@@ -1,1 +1,12 @@
 /* Global Styles */
+@import "/lib/styles/quill.css";
+
+@at-root {
+    @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap");
+    @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+    @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+}
+
+.theme-background {
+    background-color: var(--semantic-color-background-primary-base);
+}
