chore: convert percentage opacity values

--- a/lib/styles/quill.css
+++ b/lib/styles/quill.css
@@ -956,21 +956,21 @@
         var(--core-color-solid-slate-1300),
         var(--core-opacity-50)
     );
-    --core-opacity-50: 0%;
-    --core-opacity-75: 4%;
-    --core-opacity-100: 8%;
-    --core-opacity-200: 16%;
-    --core-opacity-300: 24%;
-    --core-opacity-400: 32%;
-    --core-opacity-500: 40%;
-    --core-opacity-600: 48%;
-    --core-opacity-700: 56%;
-    --core-opacity-800: 64%;
-    --core-opacity-900: 72%;
-    --core-opacity-1000: 80%;
-    --core-opacity-1100: 88%;
-    --core-opacity-1200: 96%;
-    --core-opacity-1300: 100%;
+    --core-opacity-50: 0;
+    --core-opacity-75: 0.04;
+    --core-opacity-100: 0.08;
+    --core-opacity-200: 0.16;
+    --core-opacity-300: 0.24;
+    --core-opacity-400: 0.32;
+    --core-opacity-500: 0.4;
+    --core-opacity-600: 0.48;
+    --core-opacity-700: 0.56;
+    --core-opacity-800: 0.64;
+    --core-opacity-900: 0.72;
+    --core-opacity-1000: 0.8;
+    --core-opacity-1100: 0.88;
+    --core-opacity-1200: 0.96;
+    --core-opacity-1300: 1;
     --core-color-gradient-slate-110: linear-gradient(
         1.93deg,
         var(--core-color-opacity-overflow-100) 1.56%,
