fix: update css file to scss

--- a/lib/styles/index.scss
+++ b/lib/styles/index.scss
@@ -1,5 +1,5 @@
 /* Global Styles */
-@import "/lib/styles/quill.css";
+@import "./quill.scss";
 
 @at-root {
     @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap");
