--- a/lib/components/Button/button.scss
+++ b/lib/components/Button/button.scss
@@ -1,6 +1,6 @@
 .quill-button{
     &__size{
-        display: flex;
+        display: inline-flex;
         align-items: center;
         justify-content: center;
        
@@ -32,22 +32,5 @@
     &__full-width {
         width: 100%;
     }
-    &__standalone-icon{
-        &--sm{
-            width: 12px;
-            height: 18px;
-        }
-        &--md{
-            width: 14px;
-            height: 22px;
-        }
-        &--lg{
-            width: 16px;
-            height: 24px;
-        }
-        &--xl{
-            width: 20px;
-            height: 30px;
-        }
-    }
+   
 }
