--- a/lib/styles/index.scss
+++ b/lib/styles/index.scss
@@ -16,6 +16,7 @@
         &--primary-coral {
             background-color: var(--core-color-solid-coral-700);
             color: var(--core-color-solid-slate-50);
+            fill:  var(--core-color-solid-slate-50);
             border: none;
             &:hover:not(:disabled){
                 background-color: var(--core-color-solid-coral-800);
@@ -30,6 +31,7 @@
         &--primary-black{
             background-color: var(--core-color-solid-slate-1400);
             color: var(--core-color-solid-slate-50);
+            fill: var(--core-color-solid-slate-50);
             border: none;
             &:hover:not(:disabled){
                 background-color: var(--core-color-solid-slate-700);
@@ -45,6 +47,7 @@
         &--primary-white{
             background-color: var(--core-color-solid-slate-50);
             color: var(--core-color-solid-slate-1400);
+            fill: var(--core-color-solid-slate-1400);
             border: none;
             &:hover:not(:disabled){
                 background-color: var(--core-color-opacity-white-800);
@@ -59,6 +62,7 @@
         &--primary-purchase {
             background-color : var(--core-color-solid-emerald-700);
             color: var(--core-color-solid-slate-50);
+            fill: var(--core-color-solid-slate-50);
             border: none;
             &:hover:not(:disabled) {
                 background-color: var(--core-color-solid-emerald-800);
@@ -73,6 +77,7 @@
         &--primary-sell {
             background-color: var(--core-color-solid-cherry-700);
             color: var(--core-color-solid-slate-50);
+            fill: var(--core-color-solid-slate-50);
             border: none;
             &:hover:not(:disabled) {
                 background-color: var(--core-color-solid-cherry-800);
@@ -89,6 +94,7 @@
             border-style: solid;
             border-color: var(--core-color-solid-coral-700);
             color:  var(--core-color-solid-coral-700);
+            fill: var(--core-color-solid-coral-700);
             &:hover:not(:disabled){
                 background-color: var(--core-color-opacity-coral-100);
             }
@@ -104,6 +110,7 @@
             border-style: solid;
             border-color: var(--core-color-solid-black-1400);
             color:  var(--core-color-solid-black-1400);
+            fill:  var(--core-color-solid-black-1400);
             &:hover:not(:disabled){
                 background-color: var(--core-color-opacity-black-100);
             }
@@ -111,7 +118,7 @@
                 background-color: var(--core-color-opacity-black-200);
             }
             &:disabled{
-                background-color: none;
+                opacity: 0.4;
             }
         }
         &--secondary-white{
@@ -119,6 +126,7 @@
             border-style: solid;
             border-color: var(--core-color-solid-slate-50);
             color:  var(--core-color-solid-slate-50);
+            fill:  var(--core-color-solid-slate-50);
             &:hover:not(:disabled){
                 background-color: var(--core-color-opacity-white-200);
             }
@@ -126,7 +134,7 @@
                 background-color: var(--core-color-opacity-white-100);
             }
             &:disabled{
-                background-color: var(--core-color-opacity-white-100);
+                opacity: 0.4;
             }
         }
         &--secondary-purchase {
@@ -134,6 +142,7 @@
             border-style: solid;
             border-color: var(--core-color-solid-emerald-700);
             color: var(--core-color-solid-emerald-700);
+            fill: var(--core-color-solid-emerald-700);
             &:hover:not(:disabled) {
                 background-color:var(--core-color-solid-emerald-100);
             }
@@ -149,6 +158,7 @@
             border-style: solid;
             border-color: var(--core-color-solid-cherry-700);
             color: var(--core-color-solid-cherry-700);
+            fill: var(--core-color-solid-cherry-700);
             &:hover:not(:disabled) {
                 background-color: var(--core-color-solid-cherry-100);
             }
@@ -162,6 +172,7 @@
         &--tertiary-coral{
             background-color :transparent;
             color: var(--core-color-solid-coral-700);
+            fill: var(--core-color-solid-coral-700);
             text-decoration: underline;
             border: none;
             &:hover:not(:disabled){
@@ -171,12 +182,13 @@
                 background-color: var(--core-color-opacity-coral-200);
             }
             &:disabled{
-                background-color: none;
+                opacity: 0.4;
             }
         }
         &--tertiary-black{
             background-color :transparent;
             color: var(--core-color-solid-black-1400);
+            fill: var(--core-color-solid-black-1400);
             text-decoration: underline;
             border: none;
             &:hover:not(:disabled){
@@ -192,6 +204,7 @@
         &--tertiary-white{
             background-color :transparent;
             color: var(--core-color-solid-slate-50);
+            fill: var(--core-color-solid-slate-50);
             text-decoration: underline;
             border: none;
             &:hover:not(:disabled){
@@ -207,6 +220,7 @@
         &--tertiary-purchase{
             background-color :transparent;
             color: var(--core-color-solid-emerald-700);
+            fill: var(--core-color-solid-emerald-700);
             text-decoration: underline;
             border: none;
             &:hover:not(:disabled) {
@@ -222,6 +236,7 @@
         &--tertiary-sell{
             background-color :transparent;
             color: var(--core-color-solid-cherry-700);
+            fill: var(--core-color-solid-cherry-700);
             text-decoration: underline;
             border: none;
             &:hover:not(:disabled) {
