chore: fix color and add lint-staged run test before commmit

--- a/lib/components/Typography/typography.scss
+++ b/lib/components/Typography/typography.scss
@@ -93,14 +93,27 @@ $weights: regular, bold;
 }
 
 .quill-typography {
+    &__color {
+        &--prominent {
+            color: var(--semantic-color-typography-prominent);
+        }
+        &--default {
+            color: var(--semantic-color-typography-default);
+        }
+        &--subtle {
+            color: var(--semantic-color-typography-subtle);
+        }
+        &--disabled {
+            color: var(--semantic-color-typography-disabled);
+        }
+    }
+
     &__caption-text {
         @include customTypeTextStyles(caption);
-        color: var(--semantic-color-typography-prominent);
     }
 
     @each $heading in $headings {
         &__#{$heading} {
-            color: var(--semantic-color-typography-prominent);
             font-family: var(
                 --semantic-typography-heading-#{$heading}-fontFamily
             );
@@ -120,11 +133,9 @@ $weights: regular, bold;
 
     &__code-text {
         @include customTypeTextStyles(code, true);
-        color: var(--semantic-color-typography-default);
     }
 
     &__body-text {
         @include customTypeTextStyles(body, true);
-        color: var(--semantic-color-typography-default);
     }
 }
