--- a/lib/styles/quill.scss
+++ b/lib/styles/quill.scss
@@ -1,4 +1,304 @@
 :root {
+    --static-spacing-1: 1px;
+    --static-spacing-2: 2px;
+    --static-spacing-3: 3px;
+    --static-spacing-4: 4px;
+    --static-spacing-5: 5px;
+    --static-spacing-6: 6px;
+    --static-spacing-7: 7px;
+    --static-spacing-8: 8px;
+    --static-spacing-9: 9px;
+    --static-spacing-10: 10px;
+    --static-spacing-11: 11px;
+    --static-spacing-12: 12px;
+    --static-spacing-13: 13px;
+    --static-spacing-14: 14px;
+    --static-spacing-15: 15px;
+    --static-spacing-16: 16px;
+    --static-spacing-17: 17px;
+    --static-spacing-18: 18px;
+    --static-spacing-19: 19px;
+    --static-spacing-20: 20px;
+    --static-spacing-21: 21px;
+    --static-spacing-22: 22px;
+    --static-spacing-23: 23px;
+    --static-spacing-24: 24px;
+    --static-spacing-25: 25px;
+    --static-spacing-26: 26px;
+    --static-spacing-27: 27px;
+    --static-spacing-28: 28px;
+    --static-spacing-29: 29px;
+    --static-spacing-30: 30px;
+    --static-spacing-31: 31px;
+    --static-spacing-32: 32px;
+    --static-spacing-33: 33px;
+    --static-spacing-34: 34px;
+    --static-spacing-35: 35px;
+    --static-spacing-36: 36px;
+    --static-spacing-37: 37px;
+    --static-spacing-38: 38px;
+    --static-spacing-39: 39px;
+    --static-spacing-40: 40px;
+    --static-spacing-41: 41px;
+    --static-spacing-42: 42px;
+    --static-spacing-43: 43px;
+    --static-spacing-44: 44px;
+    --static-spacing-45: 45px;
+    --static-spacing-46: 46px;
+    --static-spacing-47: 47px;
+    --static-spacing-48: 48px;
+    --static-spacing-49: 49px;
+    --static-spacing-50: 50px;
+    --static-spacing-51: 51px;
+    --static-spacing-52: 52px;
+    --static-spacing-53: 53px;
+    --static-spacing-54: 54px;
+    --static-spacing-55: 55px;
+    --static-spacing-56: 56px;
+    --static-spacing-57: 57px;
+    --static-spacing-58: 58px;
+    --static-spacing-59: 59px;
+    --static-spacing-60: 60px;
+    --static-spacing-61: 61px;
+    --static-spacing-62: 62px;
+    --static-spacing-63: 63px;
+    --static-spacing-64: 64px;
+    --static-spacing-65: 65px;
+    --static-spacing-66: 66px;
+    --static-spacing-67: 67px;
+    --static-spacing-68: 68px;
+    --static-spacing-69: 69px;
+    --static-spacing-70: 70px;
+    --static-spacing-71: 71px;
+    --static-spacing-72: 72px;
+    --static-spacing-73: 73px;
+    --static-spacing-74: 74px;
+    --static-spacing-75: 75px;
+    --static-spacing-76: 76px;
+    --static-spacing-77: 77px;
+    --static-spacing-78: 78px;
+    --static-spacing-79: 79px;
+    --static-spacing-80: 80px;
+    --static-spacing-81: 81px;
+    --static-spacing-82: 82px;
+    --static-spacing-83: 83px;
+    --static-spacing-84: 84px;
+    --static-spacing-85: 85px;
+    --static-spacing-86: 86px;
+    --static-spacing-87: 87px;
+    --static-spacing-88: 88px;
+    --static-spacing-89: 89px;
+    --static-spacing-90: 90px;
+    --static-spacing-91: 91px;
+    --static-spacing-92: 92px;
+    --static-spacing-93: 93px;
+    --static-spacing-94: 94px;
+    --static-spacing-95: 95px;
+    --static-spacing-96: 96px;
+    --static-spacing-97: 97px;
+    --static-spacing-98: 98px;
+    --static-spacing-99: 99px;
+    --static-spacing-100: 100px;
+    --static-spacing-101: 101px;
+    --static-spacing-102: 102px;
+    --static-spacing-103: 103px;
+    --static-spacing-104: 104px;
+    --static-spacing-105: 105px;
+    --static-spacing-106: 106px;
+    --static-spacing-107: 107px;
+    --static-spacing-108: 108px;
+    --static-spacing-109: 109px;
+    --static-spacing-110: 110px;
+    --static-spacing-111: 111px;
+    --static-spacing-112: 112px;
+    --static-spacing-113: 113px;
+    --static-spacing-114: 114px;
+    --static-spacing-115: 115px;
+    --static-spacing-116: 116px;
+    --static-spacing-117: 117px;
+    --static-spacing-118: 118px;
+    --static-spacing-119: 119px;
+    --static-spacing-120: 120px;
+    --static-spacing-121: 121px;
+    --static-spacing-122: 122px;
+    --static-spacing-123: 123px;
+    --static-spacing-124: 124px;
+    --static-spacing-125: 125px;
+    --static-spacing-126: 126px;
+    --static-spacing-127: 127px;
+    --static-spacing-128: 128px;
+    --static-spacing-129: 129px;
+    --static-spacing-130: 130px;
+    --static-spacing-131: 131px;
+    --static-spacing-132: 132px;
+    --static-spacing-133: 133px;
+    --static-spacing-134: 134px;
+    --static-spacing-135: 135px;
+    --static-spacing-136: 136px;
+    --static-spacing-137: 137px;
+    --static-spacing-138: 138px;
+    --static-spacing-139: 139px;
+    --static-spacing-140: 140px;
+    --static-spacing-141: 141px;
+    --static-spacing-142: 142px;
+    --static-spacing-143: 143px;
+    --static-spacing-144: 144px;
+    --static-spacing-145: 145px;
+    --static-spacing-146: 146px;
+    --static-spacing-147: 147px;
+    --static-spacing-148: 148px;
+    --static-spacing-149: 149px;
+    --static-spacing-150: 150px;
+    --static-spacing-151: 151px;
+    --static-spacing-152: 152px;
+    --static-spacing-153: 153px;
+    --static-spacing-154: 154px;
+    --static-spacing-155: 155px;
+    --static-spacing-156: 156px;
+    --static-spacing-157: 157px;
+    --static-spacing-158: 158px;
+    --static-spacing-159: 159px;
+    --static-spacing-160: 160px;
+    --static-spacing-161: 161px;
+    --static-spacing-162: 162px;
+    --static-spacing-163: 163px;
+    --static-spacing-164: 164px;
+    --static-spacing-165: 165px;
+    --static-spacing-166: 166px;
+    --static-spacing-167: 167px;
+    --static-spacing-168: 168px;
+    --static-spacing-169: 169px;
+    --static-spacing-170: 170px;
+    --static-spacing-171: 171px;
+    --static-spacing-172: 172px;
+    --static-spacing-173: 173px;
+    --static-spacing-174: 174px;
+    --static-spacing-175: 175px;
+    --static-spacing-176: 176px;
+    --static-spacing-177: 177px;
+    --static-spacing-178: 178px;
+    --static-spacing-179: 179px;
+    --static-spacing-180: 180px;
+    --static-spacing-181: 181px;
+    --static-spacing-182: 182px;
+    --static-spacing-183: 183px;
+    --static-spacing-184: 184px;
+    --static-spacing-185: 185px;
+    --static-spacing-186: 186px;
+    --static-spacing-187: 187px;
+    --static-spacing-188: 188px;
+    --static-spacing-189: 189px;
+    --static-spacing-190: 190px;
+    --static-spacing-191: 191px;
+    --static-spacing-192: 192px;
+    --static-spacing-193: 193px;
+    --static-spacing-194: 194px;
+    --static-spacing-195: 195px;
+    --static-spacing-196: 196px;
+    --static-spacing-197: 197px;
+    --static-spacing-198: 198px;
+    --static-spacing-199: 199px;
+    --static-spacing-200: 200px;
+    --static-spacing-201: 201px;
+    --static-spacing-202: 202px;
+    --static-spacing-203: 203px;
+    --static-spacing-204: 204px;
+    --static-spacing-205: 205px;
+    --static-spacing-206: 206px;
+    --static-spacing-207: 207px;
+    --static-spacing-208: 208px;
+    --static-spacing-209: 209px;
+    --static-spacing-210: 210px;
+    --static-spacing-211: 211px;
+    --static-spacing-212: 212px;
+    --static-spacing-213: 213px;
+    --static-spacing-214: 214px;
+    --static-spacing-215: 215px;
+    --static-spacing-216: 216px;
+    --static-spacing-217: 217px;
+    --static-spacing-218: 218px;
+    --static-spacing-219: 219px;
+    --static-spacing-220: 220px;
+    --static-spacing-221: 221px;
+    --static-spacing-222: 222px;
+    --static-spacing-223: 223px;
+    --static-spacing-224: 224px;
+    --static-spacing-225: 225px;
+    --static-spacing-226: 226px;
+    --static-spacing-227: 227px;
+    --static-spacing-228: 228px;
+    --static-spacing-229: 229px;
+    --static-spacing-230: 230px;
+    --static-spacing-231: 231px;
+    --static-spacing-232: 232px;
+    --static-spacing-233: 233px;
+    --static-spacing-234: 234px;
+    --static-spacing-235: 235px;
+    --static-spacing-236: 236px;
+    --static-spacing-237: 237px;
+    --static-spacing-238: 238px;
+    --static-spacing-239: 239px;
+    --static-spacing-240: 240px;
+    --static-spacing-241: 241px;
+    --static-spacing-242: 242px;
+    --static-spacing-243: 243px;
+    --static-spacing-244: 244px;
+    --static-spacing-245: 245px;
+    --static-spacing-246: 246px;
+    --static-spacing-247: 247px;
+    --static-spacing-248: 248px;
+    --static-spacing-249: 249px;
+    --static-spacing-250: 250px;
+    --static-spacing-251: 251px;
+    --static-spacing-252: 252px;
+    --static-spacing-253: 253px;
+    --static-spacing-254: 254px;
+    --static-spacing-255: 255px;
+    --static-spacing-256: 256px;
+    --static-spacing-257: 257px;
+    --static-spacing-258: 258px;
+    --static-spacing-259: 259px;
+    --static-spacing-260: 260px;
+    --static-spacing-261: 261px;
+    --static-spacing-262: 262px;
+    --static-spacing-263: 263px;
+    --static-spacing-264: 264px;
+    --static-spacing-265: 265px;
+    --static-spacing-266: 266px;
+    --static-spacing-267: 267px;
+    --static-spacing-268: 268px;
+    --static-spacing-269: 269px;
+    --static-spacing-270: 270px;
+    --static-spacing-271: 271px;
+    --static-spacing-272: 272px;
+    --static-spacing-273: 273px;
+    --static-spacing-274: 274px;
+    --static-spacing-275: 275px;
+    --static-spacing-276: 276px;
+    --static-spacing-277: 277px;
+    --static-spacing-278: 278px;
+    --static-spacing-279: 279px;
+    --static-spacing-280: 280px;
+    --static-spacing-281: 281px;
+    --static-spacing-282: 282px;
+    --static-spacing-283: 283px;
+    --static-spacing-284: 284px;
+    --static-spacing-285: 285px;
+    --static-spacing-286: 286px;
+    --static-spacing-287: 287px;
+    --static-spacing-288: 288px;
+    --static-spacing-289: 289px;
+    --static-spacing-290: 290px;
+    --static-spacing-291: 291px;
+    --static-spacing-292: 292px;
+    --static-spacing-293: 293px;
+    --static-spacing-294: 294px;
+    --static-spacing-295: 295px;
+    --static-spacing-296: 296px;
+    --static-spacing-297: 297px;
+    --static-spacing-298: 298px;
+    --static-spacing-299: 299px;
+    --static-spacing-300: 300px;
     --core-borderRadius-50: 0px;
     --core-borderRadius-100: 2px;
     --core-borderRadius-200: 4px;
